--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                         <tbody>
                             <tr>
                                 <td>
-                                    <a href="/disciplinas/progBasWeb.html">Programação Básica para web</a> 
+                                    <a href="https://rauner25.github.io/disciplinas/progBasWeb.html">Programação Básica para web</a> 
                                 </td>
                                 <td>
                                     Mauro Henerique Lima de Boni
@@ -60,7 +60,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                   <a href="/disciplinas/testSoft.html">Testes de Softwares</a>
+                                   <a href="https://rauner25.github.io/disciplinas/testSoft.html">Testes de Softwares</a>
                                 </td>
                                 <td>
                                     Mauro Henerique Lima de Boni
@@ -68,7 +68,7 @@
                             </tr>
                             <tr>
                                 <td>
-                                     <a href="/disciplinas/projSitem.html">Projeto de Sistemas</a>
+                                     <a href="https://rauner25.github.io/disciplinas/projSitem.html">Projeto de Sistemas</a>
                                 </td>
                                 <td>
                                     Mauro Henerique Lima de Boni
