atividade_Alteracao_estrutural

--- a/disciplinas/progBasWeb.html
+++ b/disciplinas/progBasWeb.html
@@ -6,53 +6,54 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Rauner lucas A. A.">
     <title>Programacao_basica_web</title>
    	<link rel="stylesheet" href="modelagem.css">
 </head>
 
 <body>
-    <div>
+    <header>
         <h1 class="cont">Programacao_basica_web</h1>
-        <table >
-            <tr>    
-                <td><h6><a href="../index.html"><i>Inicial</i></a></h6></td>
-                <td><h6><a href="testSoft.html"><i>Proxima</i></a></h6></td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table border="4px" border-color="grey">
-            <thead>
-                <th>Carga horária</th>
-                <th>Ementa</th> 
-                <th>Competências</th>
-                <th>Habilidade</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Horas Presenciais: 60;<br>
-                        Horas a Distância: 12;
-                        Horas Totais: 72.
-                    </td>
-                    <td>Construção de páginas Web por meio de Web Standards (W3C);<br>
-                        Linguagem de marcação: HyperText Markup Language (HTML);<br>
-                        Construção de estilos para páginas Web com Cascade Style Sheet (CSS);<br>
-                        Introdução de comportamentos em páginas Web por meio de programação Javascript;
-                    </td>
-                    <td>
-                        Conhecer fundamentos, tecnologias e ferramentas para desenvolver páginas
-                        Web;<br>
-                        Desenvolver páginas Web de acordo com os padrões Web do W3C
-                    </td>
-                    <td>Utilização de ferramentas e técnicas para criação e manutenção de páginas na
-                        internet;<br>
-                        Aplicação da estrutura de estilos em páginas Web;<br>
-                        Estruturação de layouts de aplicações Web de acordo com os padrões W3C <br>
-                        Aplicação dos comportamentos em páginas Web utilizando JavaScript;</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+        <nav>
+            <li><a href="../index.html"><i>Inicial</i></a></li>
+            <li><a href="testSoft.html"><i>Proxima</i></a></li>
+        </nav>
+    </header>
+    <article>
+        <div>
+            <table border="4px" border-color="grey">
+                <thead>
+                    <th>Carga horária</th>
+                    <th>Ementa</th> 
+                    <th>Competências</th>
+                    <th>Habilidade</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Horas Presenciais: 60;<br>
+                            Horas a Distância: 12;
+                            Horas Totais: 72.
+                        </td>
+                        <td>Construção de páginas Web por meio de Web Standards (W3C);<br>
+                            Linguagem de marcação: HyperText Markup Language (HTML);<br>
+                            Construção de estilos para páginas Web com Cascade Style Sheet (CSS);<br>
+                            Introdução de comportamentos em páginas Web por meio de programação Javascript;
+                        </td>
+                        <td>
+                            Conhecer fundamentos, tecnologias e ferramentas para desenvolver páginas
+                            Web;<br>
+                            Desenvolver páginas Web de acordo com os padrões Web do W3C
+                        </td>
+                        <td>Utilização de ferramentas e técnicas para criação e manutenção de páginas na
+                            internet;<br>
+                            Aplicação da estrutura de estilos em páginas Web;<br>
+                            Estruturação de layouts de aplicações Web de acordo com os padrões W3C <br>
+                            Aplicação dos comportamentos em páginas Web utilizando JavaScript;</td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </article>
 </body>
 
 </html>
