--- a/disciplinas/testSoft.html
+++ b/disciplinas/testSoft.html
@@ -5,64 +5,65 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Rauner lucas A. A.">
     <title>Testes_de_Softwares</title>
    	<link rel="stylesheet" href="modelagem.css">
 </head>
 
 <body>
-    <div>
+    <header>
         <h1 class="cont">Testes_de_Softwares</h1>
-     <table >
-            <tr>    
-                <td><h6><a href="progBasWeb.html"><i>Anterior</i></a></h6></td>
-                <td><h6><a href="../index.html"><i>Inicial</i></a></h6></td>
-                <td><h6><a href="projSitem.html"><i>Proxima</i></a></h6></td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table border="4px" border-color="grey">
-            <thead>
-                <th>Carga horária</th>
-                <th>Ementa</th> 
-                <th>Competências</th>
-                <th>Habilidade</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>Horas Presenciais: 30;<br>
-                        Horas a Distância: 06;
-                        Horas Totais: 36.
-                    </td>
-                    <td>
-                        Conceitos básicos relacionados a teste de software; <br>
-                        Processos de testes; <br>
-                        Ferramentas para planejamento, elaboração e automatização testes de software; <br>
-                        Manipular ferramentas para execução de planos de testes de software; <br>
-                        Classes de automação: QAI x ISTQB;<br>
-                        Gerenciamento do planejamento de testes;<br>
-                        Projeto de Casos de Teste;<br>
-                        Tipos de Testes;<br>
-                        Ferramentas;<br>
-                        Gerenciamento dos defeitos;<br>
-                        Elaboração de laudo e parecer técnico;<br>
-                        Conceitos básicos relacionados a teste de software; <br>
-                        Plano de testes; <br>
-                        TDD. <br>
-                    </td>
-                    <td>
-                        Sem competências previamente exclarecidas.
-                    </td>
-                    <td>
-                        Execução de teste e softwares em geral; <br>
-                        Utilização de ferramentas para planejamento, elaboração e automatização testes de software; <br>
-                        Planejamento de Testes; <br>
-                        Desenvolvimento de Projeto de Casos de Teste. <br>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+        <nav>
+            <li><a href="progBasWeb.html"><i>Anterior</i></a></li>
+            <li><a href="../index.html"><i>Inicial</i></a></li>
+            <li><a href="projSitem.html"><i>Proxima</i></a></li>
+        </nav> 
+    </header>
+    <article>
+        <div>
+            <table border="4px" border-color="grey">
+                <thead>
+                    <th>Carga horária</th>
+                    <th>Ementa</th> 
+                    <th>Competências</th>
+                    <th>Habilidade</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Horas Presenciais: 30;<br>
+                            Horas a Distância: 06;
+                            Horas Totais: 36.
+                        </td>
+                        <td>
+                            Conceitos básicos relacionados a teste de software; <br>
+                            Processos de testes; <br>
+                            Ferramentas para planejamento, elaboração e automatização testes de software; <br>
+                            Manipular ferramentas para execução de planos de testes de software; <br>
+                            Classes de automação: QAI x ISTQB;<br>
+                            Gerenciamento do planejamento de testes;<br>
+                            Projeto de Casos de Teste;<br>
+                            Tipos de Testes;<br>
+                            Ferramentas;<br>
+                            Gerenciamento dos defeitos;<br>
+                            Elaboração de laudo e parecer técnico;<br>
+                            Conceitos básicos relacionados a teste de software; <br>
+                            Plano de testes; <br>
+                            TDD. <br>
+                        </td>
+                        <td>
+                            Sem competências previamente exclarecidas.
+                        </td>
+                        <td>
+                            Execução de teste e softwares em geral; <br>
+                            Utilização de ferramentas para planejamento, elaboração e automatização testes de software; <br>
+                            Planejamento de Testes; <br>
+                            Desenvolvimento de Projeto de Casos de Teste. <br>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </article>
 </body>
 
 </html>
