--- a/disciplinas/projSitem.html
+++ b/disciplinas/projSitem.html
@@ -5,55 +5,56 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Rauner lucas A. A.">
     <title>Projeto_de_Sistemas</title>
    	<link rel="stylesheet" href="modelagem.css">
 </head>
 
 <body>
-    <div>
+    <header>
         <h1 class="cont">Projeto_de_Sistemas</h1>
-     <table >
-            <tr>    
-                <td><h6><a href="testSoft.html"><i>Anterior</i></a></h6></td>
-                <td><h6><a href="../index.html"><i>Inicial</i></a></h6></td>
-                <td><h6><a href="progBasWeb.html"><i>Proxima</i></a></h6></td>
-            </tr>
-        </table>
-    </div>
-    <div>
-        <table border="4px" border-color="grey">
-            <thead>
-                <th>Carga horária</th>
-                <th>Ementa</th> 
-                <th>Competências</th>
-                <th>Habilidade</th>
-            </thead>
-            <tbody>
-                <tr>
-                    <td>
-                        Horas Presenciais: 30;<br>
-                        Horas a Distância: 06;
-                        Horas Totais: 36.
-                    </td>
-                    <td>
-                        Modelagem de Sistemas;<br>
-                        Projeto de Arquitetura;<br>
-                        Projeto de API.<br>
-                    </td>
-                    <td>
-                        Sem competências previamente exclarecidas.
-                    </td>
-                    <td>
-                        Conhecer uma forma de documentar a arquitetura de um
-                        software; <br>
-                        Utilização de UML para representação de visões da arquitetura. <br>
-                        Conhecer os conceitos de API, Rest e RestFul. <br>
-                        Documentar uma API REST. <br>
-                    </td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
+        <nav>        
+            <li><a href="testSoft.html"><i>Anterior</i></a></li>
+            <li><a href="../index.html"><i>Inicial</i></a></li>
+            <li><a href="progBasWeb.html"><i>Proxima</i></a></li>
+        </nav>
+    </header>
+    <article>
+        <div>
+            <table border="4px" border-color="grey">
+                <thead>
+                    <th>Carga horária</th>
+                    <th>Ementa</th> 
+                    <th>Competências</th>
+                    <th>Habilidade</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            Horas Presenciais: 30;<br>
+                            Horas a Distância: 06;
+                            Horas Totais: 36.
+                        </td>
+                        <td>
+                            Modelagem de Sistemas;<br>
+                            Projeto de Arquitetura;<br>
+                            Projeto de API.<br>
+                        </td>
+                        <td>
+                            Sem competências previamente exclarecidas.
+                        </td>
+                        <td>
+                            Conhecer uma forma de documentar a arquitetura de um
+                            software; <br>
+                            Utilização de UML para representação de visões da arquitetura. <br>
+                            Conhecer os conceitos de API, Rest e RestFul. <br>
+                            Documentar uma API REST. <br>
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+    </article>
 </body>
 
 </html>
