--- a/index.html
+++ b/index.html
@@ -1,111 +1,113 @@
-<!-- Codigo elaborado no dia 09.08.22; tempo gato 3horas; Por Ruaner Lucas -->
+<!-- Codigo elaborado no dia 09.08.22; tempo gasto 3.30horas; Por Ruaner Lucas -->
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="author" content="Rauner lucas A. A.">
+    <meta name="description" content="Site referente a disciplina de b.web">
     <title>Quem é RAUNER</title>
 	<link rel="stylesheet" href="jeitinho.css">
 </head>
-    <body>
-        <section class="container">
-            <div class="card">
-                <h1 class="cont">Quem sou eu?</h1>
-                <img src="https://raw.githubusercontent.com/RAUNER25/prog_Basic_Web/main/raunerImag200x200.jpg" alt="RaunerImagem" class="imagem">
-                <p>Prazer, sou <b>Rauner</b>, ou melhor <I>Rauner Lucas Alves Amaral</I>, o mundo teve a dádiva de me receber no dia 25.12.2002; Atualmente tenho 19 anos;
-                    Sou um aspirante a Analista de Softwares; Iniciei meu curso de formação em Sistemas para internet no ano de 2022/1, no vulgo IFTO; <br>
-                    Busco um dia se um Full Stack e estar liderando uma equipe de desenvolvedores atualmente não tenho muito conhecimento na área,<br>
-                    mas estou em constante busca e buscando de maneira incessante. <br>
-                    <a href="https://sublimefilosofia.com.br/socrates-a-vida-irrefletida-nao-vale-a-pena-ser-vivida/"><q>A vida irrefletida não vale a pena ser vivida</q></a> Por: <em>Sócrates</em>.
-                </p>
-            </div>
-            <div class="card">
-                <h2 class="cont">Meus Hobbies:</h2>
-                <p>Para que me conheça melhor te direi alguns de meus "hobbies", a princípio eu gosto bastante de tentar consertar coisa(Equipamento eletronicos, moveis e etc...) quebradas<br>
-                    ou até mesmo criar coisas. Quando me falta coisas pra dar manutenção, eu busco algum conhecimento novo, essa brincadeira me resultou em conhecimento em áreas diversas, desde<br>
-                    eletricista a até programador; fazer telhados ou até dimensionar, vender e instalar painéis solares eu aprendi nessa brincadeira. De hobbies comuns me sobram estudar, pescar, cozinha,<br>
-                    pintar, e qualquer outra coisa que permita expressar minha criatividade e prazer em fazer coisas. <br>
-                    <i>Me siga lá no:</i><br>
-                    <a href="https://www.instagram.com/rauner_lucas/"><strong><i>Instagram</i></strong>
-                    </a>
-                </p>
-            </div>
-            <div class="card">
-                <h2 class="cont">Meus projetos:</h2>
-                <p>
-                    Se seguir a lógica dos meus hobbies você deve está se perguntando por que tenho tão poucos projetos, é bem simples ou decorrer da minha jornada de vida eu desenvolvi um senso<br>
-                    critico bem forte. Desse modo, poucos dos muitos projetos que fiz foram para o guit, alguns não achei que eram bom suficentes outro não podia simplismente subir.<br>
-                    Eu não sou o melhor mas ao menor Hellow Word eu sei fazer aparecer na tela.<br>
-                    Por isso vou deixar aqui um link: <a href="https://github.com/RAUNER25"><strong><i>GitHub</i></strong></a>.
-                </p>
-            </div>
-            <div class="card">
-                <h2 class="contest">O que estou estudando Atualmente:</h2>
-                <p>
-                    <table border="1px" border-color="black">
-                        <caption><i>Grade curricular</i></caption>
-                        <thead>
-                            <th>Materia</th>
-                            <th>Professor</th>
-                        </thead>     
-                        <tbody>
-                            <tr>
-                                <td>
-                                    <a href="https://rauner25.github.io/prog_Basic_Web/disciplinas/progBasWeb.html">Programação Básica para web</a> 
-                                </td>
-                                <td>
-                                    Mauro Henerique Lima de Boni
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                   <a href="https://rauner25.github.io/prog_Basic_Web/disciplinas/testSoft.html">Testes de Softwares</a>
-                                </td>
-                                <td>
-                                    Mauro Henerique Lima de Boni
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                     <a href="https://rauner25.github.io/prog_Basic_Web/disciplinas/projSitem.html">Projeto de Sistemas</a>
-                                </td>
-                                <td>
-                                    Mauro Henerique Lima de Boni
-                                </td>
-                            </tr>
-
-                        </tbody>
-                    </table>
-                </p>
-            </div>
-            <div class="card">
-                <h3 class="contContato">Contato</h3>
-                <p>
-                    <table>
-                        <thead>
-                        </thead>
-                        <tbody>
-                            <tr>
-                                <tr><td>Como seu interesse por mim é notório por estar me procurando por essa pagina aqui tem alguns dos meus contatos:</td></tr>
-                                <td>
-                                    <a href="https://www.linkedin.com/in/rauner-lucas-amaral-0b3a8a199/"><strong><i>Linkedin</i></strong></a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <a href="https://wa.me/+5563981160511"><strong><i>Whatsapp</i></strong></a>
-                                </td>
-                            </tr>
-                            <tr>
-                                <td>
-                                    <a href="mailto:raunerlucas@gmail.com"><strong><i>E-mail</i></strong></a>
-                                </td>
-                            </tr>
-                        </tbody>
-                    </table>
-                </p>
-            </div>
+<body>
+    <article class="container">
+        <section class="card">
+            <h1 class="cont">Quem sou eu?</h1>
+            <img src="https://raw.githubusercontent.com/RAUNER25/prog_Basic_Web/main/raunerImag200x200.jpg" alt="RaunerImagem" class="imagem">
+            <p>Prazer, sou <b>Rauner</b>, ou melhor <I>Rauner Lucas Alves Amaral</I>, o mundo teve a dádiva de me receber no dia 25.12.2002; Atualmente tenho 19 anos;
+                Sou um aspirante a Analista de Softwares; Iniciei meu curso de formação em Sistemas para internet no ano de 2022/1, no vulgo IFTO; <br>
+                Busco um dia se um Full Stack e estar liderando uma equipe de desenvolvedores atualmente não tenho muito conhecimento na área,<br>
+                mas estou em constante busca e buscando de maneira incessante. <br>
+                <a href="https://sublimefilosofia.com.br/socrates-a-vida-irrefletida-nao-vale-a-pena-ser-vivida/"><q>A vida irrefletida não vale a pena ser vivida</q></a> Por: <em>Sócrates</em>.
+            </p>
         </section>
-    </body>
+        <section class="card">
+            <h2 class="cont">Meus Hobbies:</h2>
+            <p>Para que me conheça melhor te direi alguns de meus "hobbies", a princípio eu gosto bastante de tentar consertar coisa(Equipamento eletronicos, moveis e etc...) quebradas<br>
+                ou até mesmo criar coisas. Quando me falta coisas pra dar manutenção, eu busco algum conhecimento novo, essa brincadeira me resultou em conhecimento em áreas diversas, desde<br>
+                eletricista a até programador; fazer telhados ou até dimensionar, vender e instalar painéis solares eu aprendi nessa brincadeira. De hobbies comuns me sobram estudar, pescar, cozinha,<br>
+                pintar, e qualquer outra coisa que permita expressar minha criatividade e prazer em fazer coisas. <br>
+                <i>Me siga lá no:</i><br>
+                <a href="https://www.instagram.com/rauner_lucas/"><strong><i>Instagram</i></strong>
+                </a>
+            </p>
+        </section>
+        <section class="card">
+            <h2 class="cont">Meus projetos:</h2>
+            <p>
+                Se seguir a lógica dos meus hobbies você deve está se perguntando por que tenho tão poucos projetos, é bem simples ou decorrer da minha jornada de vida eu desenvolvi um senso<br>
+                critico bem forte. Desse modo, poucos dos muitos projetos que fiz foram para o guit, alguns não achei que eram bom suficentes outro não podia simplismente subir.<br>
+                Eu não sou o melhor mas ao menor Hellow Word eu sei fazer aparecer na tela.<br>
+                Por isso vou deixar aqui um link: <a href="https://github.com/RAUNER25"><strong><i>GitHub</i></strong></a>.
+            </p>
+        </section>
+        <section class="card">
+            <h2 class="contest">O que estou estudando Atualmente:</h2>
+            <p>
+                <table border="1px" border-color="black">
+                    <caption><i>Grade curricular</i></caption>
+                    <thead>
+                        <th>Materia</th>
+                        <th>Professor</th>
+                    </thead>     
+                    <tbody>
+                        <tr>
+                            <td>
+                                <a href="https://rauner25.github.io/prog_Basic_Web/disciplinas/progBasWeb.html">Programação Básica para web</a> 
+                            </td>
+                            <td>
+                                Mauro Henerique Lima de Boni
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="https://rauner25.github.io/prog_Basic_Web/disciplinas/testSoft.html">Testes de Softwares</a>
+                            </td>
+                            <td>
+                                Mauro Henerique Lima de Boni
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                    <a href="https://rauner25.github.io/prog_Basic_Web/disciplinas/projSitem.html">Projeto de Sistemas</a>
+                            </td>
+                            <td>
+                                Mauro Henerique Lima de Boni
+                            </td>
+                        </tr>
+
+                    </tbody>
+                </table>
+            </p>
+        </section>
+        <section class="card">
+            <h3 class="contContato">Contato</h3>
+            <p>
+                <table>
+                    <thead>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <tr><td>Como seu interesse por mim é notório por estar me procurando por essa pagina aqui tem alguns dos meus contatos:</td></tr>
+                            <td>
+                                <a href="https://www.linkedin.com/in/rauner-lucas-amaral-0b3a8a199/"><strong><i>Linkedin</i></strong></a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="https://wa.me/+5563981160511"><strong><i>Whatsapp</i></strong></a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
+                                <a href="mailto:raunerlucas@gmail.com"><strong><i>E-mail</i></strong></a>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </p>
+        </section>
+    </article>
+</body>
 </html>
