--- a/index.html
+++ b/index.html
@@ -91,6 +91,11 @@
                         <tr>
                             <tr><td>Como seu interesse por mim é notório por estar me procurando por essa pagina aqui tem alguns dos meus contatos:</td></tr>
                             <td>
+                                <a href="https://rauner25.github.io/prog_Basic_Web/contato.html"><strong><i>Entre com contato comigo</i></strong></a>
+                            </td>
+                        </tr>
+                        <tr>
+                            <td>
                                 <a href="https://www.linkedin.com/in/rauner-lucas-amaral-0b3a8a199/"><strong><i>Linkedin</i></strong></a>
                             </td>
                         </tr>
