--- a/contato.html
+++ b/contato.html
@@ -14,7 +14,7 @@
     <header>
         <h1 class="contContato">Contato</h1>
         <nav>
-            <li><a href="https://rauner25.github.io/index.html"><i>Inicial</i></a></li>
+            <li><a href="https://rauner25.github.io/prog_Basic_Web/"><i>Inicial</i></a></li>
         </nav>
     </header>
     <article class="container">
@@ -32,7 +32,7 @@
                     <label for="msg">Mensagem: </label><br>
                     <textarea name="mensagem" id="msg" cols="30" rows="10"></textarea>
                 </div>    
-                <div class="submt">
+                <div class="submit">
                     <input type="submt" value="Enviar">
                 </div>
             </form>
