--- a/contato.html
+++ b/contato.html
@@ -33,7 +33,7 @@
                     <textarea name="mensagem" id="msg" cols="30" rows="10"></textarea>
                 </div>    
                 <div class="submit">
-                    <input type="submt" value="Enviar">
+                    <button type="submit">Enviar</button>
                 </div>
             </form>
         </section>
