--- a/contato.html
+++ b/contato.html
@@ -13,7 +13,7 @@
 <body>
     <header>
         <h1 class="contContato">Contato</h1>
-        <nav>
+        <nav class="card">
             <li><a href="https://rauner25.github.io/prog_Basic_Web/"><i>Inicial</i></a></li>
         </nav>
     </header>
@@ -30,7 +30,7 @@
                 </div>
                 <div class="mods">
                     <label for="msg">Mensagem: </label><br>
-                    <textarea name="mensagem" id="msg" cols="30" rows="10"></textarea>
+                    <textarea name="mensagem" id="msg" cols="30" rows="10"> </textarea>
                 </div>    
                 <div class="submit">
                     <button type="submit">Enviar</button>
