--- a/contato.html
+++ b/contato.html
@@ -19,7 +19,7 @@
     </header>
     <article class="container">
         <section>
-            <form action="/msg.php" method="post" class="formt">
+            <form action="https://rauner25.github.io/prog_Basic_Web/msg.php" method="post" class="formt">
                 <div class="mods">
                     <label for="nome">Nome: </label>
                     <input type="text" name="Nome" id="nome">
