--- a/contato.html
+++ b/contato.html
@@ -22,7 +22,7 @@
             <form action="https://rauner25.github.io/prog_Basic_Web/msg.php" method="post">
                 <div>
                     <label for="nome">Nome: </label>
-                    <input type="text" name="Nome" id="nome" placeholder="Insira Seu Nome">
+                    <input type="text" name="Nome" id="nome" title="Insira Seu Nome">
                 </div>
                 <div>
                     <label for="email">E-mail: </label>
