--- a/disciplinas/progBasWeb.html
+++ b/disciplinas/progBasWeb.html
@@ -10,14 +10,15 @@
     <title>Programacao_basica_web</title>
    	<link rel="stylesheet" href="modelagem.css">
 </head>
-
 <body>
+    <nav>
+        <ul>
+            <li><a href="../index.html">Inicial</a></li>
+            <li><a href="testSoft.html">Testes_Softwares</a></li>
+        </ul>
+    </nav>
     <header>
         <h1 class="cont">Programacao_basica_web</h1>
-        <nav>
-            <li><a href="../index.html"><i>Inicial</i></a></li>
-            <li><a href="testSoft.html"><i>Proxima</i></a></li>
-        </nav>
     </header>
     <article>
         <div>
