--- a/disciplinas/projSitem.html
+++ b/disciplinas/projSitem.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="testSoft.html">Anterior</a></li>
+            <li><a href="../index.html">Inicial</a></li>
+            <li><a href="progBasWeb.html">Proxima</a></li>
+        </ul>
+    </nav>
     <header>
         <h1 class="cont">Projeto_de_Sistemas</h1>
-        <nav>        
-            <li><a href="testSoft.html"><i>Anterior</i></a></li>
-            <li><a href="../index.html"><i>Inicial</i></a></li>
-            <li><a href="progBasWeb.html"><i>Proxima</i></a></li>
-        </nav>
     </header>
     <article>
         <div>
