--- a/disciplinas/testSoft.html
+++ b/disciplinas/testSoft.html
@@ -11,13 +11,15 @@
 </head>
 
 <body>
+    <nav>
+        <ul>
+            <li><a href="progBasWeb.html">Anterior</a></li>
+            <li><a href="../index.html">Inicial</a></li>
+            <li><a href="projSitem.html">Proxima</a></li>
+        </ul>
+    </nav>
     <header>
         <h1 class="cont">Testes_de_Softwares</h1>
-        <nav>
-            <li><a href="progBasWeb.html"><i>Anterior</i></a></li>
-            <li><a href="../index.html"><i>Inicial</i></a></li>
-            <li><a href="projSitem.html"><i>Proxima</i></a></li>
-        </nav> 
     </header>
     <article>
         <div>
