--- a/contato.html
+++ b/contato.html
@@ -11,11 +11,13 @@
 	<link rel="stylesheet" href="jeitinho.css">
 </head>
 <body>
+    <nav class="card">
+        <ul>
+        <li><a href="https://rauner25.github.io/prog_Basic_Web/"><i>Inicial</i></a></li>
+        </ul>
+    </nav>
     <header>
-        <h1 class="contContato">Contato</h1>
-        <nav class="card">
-            <li><a href="https://rauner25.github.io/prog_Basic_Web/"><i>Inicial</i></a></li>
-        </nav>
+        <h1 class="">Contato</h1>
     </header>
     <article>
         <section>
