--- a/index.html
+++ b/index.html
@@ -7,9 +7,24 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="author" content="Rauner lucas A. A.">
     <meta name="description" content="Site referente a disciplina de b.web">
-    <title>Quem é RAUNER</title>
-	<link rel="stylesheet" href="jeitinho.css">
+    <title>Quem é RAUNER</title>    
+    <link rel="stylesheet" href="jeitinho.css" type="text/css" media="screen">
 </head>
+<nav>
+    <!--
+    <ul>
+        <li><a href="#">Menu</a>
+            <ul>
+                <li><a href="quem sou">Quem Sou!</a></li>
+                <li><a href="Hobbies">Hobbies</a></li>
+                <li><a href="progetos">Progetos</a></li>
+                <li><a href="estudando">estudando</a></li>
+                <li><a href="Contato">Contato</a></li>
+            </ul>
+        </li>
+    </ul>
+    -->
+</nav>
 <body>
     <article class="container">
         <section class="card" id="quem sou">
@@ -22,7 +37,7 @@
                 <a href="https://sublimefilosofia.com.br/socrates-a-vida-irrefletida-nao-vale-a-pena-ser-vivida/"><q>A vida irrefletida não vale a pena ser vivida</q></a> Por: <em>Sócrates</em>.
             </p>
         </section>
-        <section class="card">
+        <section class="card" id="Hobbies">
             <h2 class="cont">Meus Hobbies:</h2>
             <p>Para que me conheça melhor te direi alguns de meus "hobbies", a princípio eu gosto bastante de tentar consertar coisa(Equipamento eletronicos, moveis e etc...) quebradas<br>
                 ou até mesmo criar coisas. Quando me falta coisas pra dar manutenção, eu busco algum conhecimento novo, essa brincadeira me resultou em conhecimento em áreas diversas, desde<br>
@@ -33,7 +48,7 @@
                 </a>
             </p>
         </section>
-        <section class="card">
+        <section class="card" id="progetos">
             <h2 class="cont">Meus projetos:</h2>
             <p>
                 Se seguir a lógica dos meus hobbies você deve está se perguntando por que tenho tão poucos projetos, é bem simples ou decorrer da minha jornada de vida eu desenvolvi um senso<br>
@@ -42,11 +57,11 @@
                 Por isso vou deixar aqui um link: <a href="https://github.com/RAUNER25"><strong><i>GitHub</i></strong></a>.
             </p>
         </section>
-        <section class="card">
-            <h2 class="contest">O que estou estudando Atualmente:</h2>
+        <section class="card" id="estudando">
+            <h2 class="cont">O que estou estudando Atualmente:</h2>
             <p>
                 <table border="1px" border-color="black">
-                    <caption><i>Grade curricular</i></caption>
+                    <caption><i><p>Grade curricular</p></i></caption>
                     <thead>
                         <th>Materia</th>
                         <th>Professor</th>
@@ -81,15 +96,15 @@
                 </table>
             </p>
         </section>
-        <section class="card">
-            <h3 class="contContato">Contato</h3>
+        <section class="card" id="Contato">
+            <h3 class="cont">Contato</h3>
             <p>
                 <table>
                     <thead>
                     </thead>
                     <tbody>
                         <tr>
-                            <tr><td>Como seu interesse por mim é notório por estar me procurando por essa pagina aqui tem alguns dos meus contatos:</td></tr>
+                            <tr><td><p>Como seu interesse por mim é notório por estar me procurando por essa pagina aqui tem alguns dos meus contatos:</p></td></tr>
                             <td>
                                 <a href="https://rauner25.github.io/prog_Basic_Web/contato.html"><strong><i>Entre com contato comigo</i></strong></a>
                             </td>
